sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: type mismatch;
 found   : Int(0)
 required: Boolean
var echan:Boolean =0;
                   ^AlgBubbleSort1:5: error: type mismatch;
 found   : Unit
 required: Boolean
	while (echan=true) {
                    ^